grid layout responsive

--- a/index.html
+++ b/index.html
@@ -13,15 +13,29 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+  <header>
+    <img src="/images/logo.svg" alt="">
+  </header>
 
-  We're coming soon
+  <div class="main-img"></div>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+  <main>
+    <h1><span>We're</span> <br> coming <br> soon</h1>
+    <p>Hello fellow shoppers! We're currently building our new fashion store. 
+      Add your email below to stay up-to-date with announcements and our launch deals.</p>
+    <div class="email-input">
+      <input type="text" placeholder="Email Address">
+      <input type="submit" value="x">
+    </div>
+  </main>
 
-  Email Address
   
   <footer>
     <p class="attribution">
